Fix spacing on magellan, add in-page destinations

--- a/foundation/sass/_project-styles.scss
+++ b/foundation/sass/_project-styles.scss
@@ -96,6 +96,9 @@ h2 {
       bottom: 1.25em;
     }
   }
+  h1 {
+    font-size: emCalc(35px);
+  }
 }
 
 footer {
