--- a/foundation/sass/_settings.scss
+++ b/foundation/sass/_settings.scss
@@ -1209,7 +1209,7 @@ $topbar-bg: rgba(24, 110, 3, 0.8) !default;
 // Height and margin
 
 // $topbar-height: 45px;
-// $topbar-margin-bottom: emCalc(30px);
+$topbar-margin-bottom: emCalc(5px);
 
 // Control Input height for top bar
 
